# GPS-device

./: App.tsx  README.md  app.json  package.json
android/: gradle.properties
android/app/: build.gradle
client/: .env  App.tsx  package.json
client/android/: build.gradle  settings.gradle
client/android/app/: build.gradle
client/ios/: Podfile
client/ios/gps_device/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
client/ios/gps_device.xcodeproj/: project.pbxproj
client/ios/gps_deviceTests/: gps_deviceTests.m
client/src/navigation/: AppStack.navigator.tsx  TopTab.navigator.tsx
client/src/screens/: BoundaryEdit.screen.tsx  LocationHistory.screen.tsx  ReferenceEdit.screen.tsx  Warning.screen.tsx
database/: locationInfo.validation.json  referenceLocation.validation.json
server/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml
server/src/: main.rs
server/src/database/: deviceList.rs  locationInfo.rs  mod.rs  mongodb.rs  referenceLocation.rs
server/src/models/: LocationInfo.rs  ReferenceLocation.rs  locationInfo.rs  mod.rs  referenceLocation.rs
server/src/routes/: arlet.rs  location.rs  mod.rs  reference.rs
src/components/home/: EditableInfo.tsx  Home.component.tsx  Id.tsx  LocationRecord.tsx  MapViewComponent.tsx
src/components/reference_and_boundary_edit/: ApplyButton.tsx  BackHomeButton.component.tsx
src/components/reference_edit/: BackHomeButton.component.tsx  (+2 more)
src/navigation/: TopTab.navigator.tsx
src/screens/: BoundaryEdit.screen.tsx  Home.screen.tsx  ReferenceEdit.screen.tsx
src/styles/: Spacer.tsx  appStyles.ts
(+30 files in other folders)
