[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.10.0", features = ["chrono"]}
chrono = "0.4.38"
dotenv = "0.15.0"
mongodb = "2.8.2"
rocket = "0.5.0"
serde = "1.0.202"
tokio = "1.37.0"
