[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.10.0", features = ["chrono"] }
chrono = "0.4.38"
dotenv = "0.15.0"
rocket = { version = "0.5.0", features = ["json"] }

[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["sync"]
